# simpleppt

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: install.yml  test.yml
SimplePPT/: __init__.py  ppt.py  project_ppt.py
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
simpleppt/: SimplePPT.py  __init__.py  _version.py  load_data.py  logging.py  ppt.py  project_ppt.py  settings.py  utils.py
simpleppt/data/: diffusion.csv
simpleppt/tests/: test_all.py  umap.csv
