[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "simpleppt"
dynamic = ["version"]
description = "Python implementation of SimplePPT algorithm, with GPU acceleration"
readme = "README.md"
authors = [
    {name = "Louis Faure"},
]
requires-python = ">=3.8"
dependencies = [
    "numba>=0.51.2",
    "tqdm>=4.45.0",
    "scipy>=1.4.1",
    "pandas>=1.1.1",
    "numpy>=1.18.1",
    "matplotlib>=3.2.1",
    "python-igraph>=0.8.2",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/LouisFaure/SimplePPT"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "simpleppt/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["simpleppt"]

[tool.hatch.build.targets.sdist]
include = ["/simpleppt"]
